--- a/app/components/login/login.html
+++ b/app/components/login/login.html
@@ -2,7 +2,7 @@
     <div class="row">
 		<div class="col-md-4 col-md-offset-4">
 
-			<uib-alert ng-repeat="alert in loginCtrl.alerts" type="{{alert.type}}" close="vm.closeAlert($index)" template-url="app/shared/partials/alert.html">{{alert.msg}}</uib-alert>
+			<uib-alert ng-repeat="alert in loginCtrl.alerts" type="{{alert.type}}" close="loginCtrl.closeAlert($index)" template-url="app/shared/partials/alert.html">{{alert.msg}}</uib-alert>
     		
     		<div class="panel panel-default">
 	
