--- a/app/components/dashboard/dashboard.html
+++ b/app/components/dashboard/dashboard.html
@@ -1,5 +1,3 @@
-dashboard
+<div ng-include="'app/components/dashboard/partials/availableQuestionaries.html'"></div>
 
-
-
-<a ng-click="dashboardCtrl.logoff()">logoff</a>
+<div ng-include="'app/components/dashboard/partials/executionHistory.html'"></div>
